elasticsearch/elasticsearch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
    role: single-node
spec:
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
  selector:
    component: elasticsearch
    role: single-node
  type: LoadBalancer
