elasticsearch/ek-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kibana.apps.visiumshift
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
status:
  loadBalancer:
    ingress:
    - {}
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: elasticsearch.apps.visiumshift
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
status:
  loadBalancer:
    ingress:
    - {}
